--- a/src/assets/styles/partials/_authors.scss
+++ b/src/assets/styles/partials/_authors.scss
@@ -1,7 +1,14 @@
 $author-title-color: #1d282c;
 $click-me-color: #0d48a2;
+$edit-color: #ef9829;
+$delete-color: #a6222b;
+$item-bg-color: #f5f5f5;
+$sub-title-color: #0e453e;
+$form-control-border-color: #989898;
 
 .authors {
+  margin-bottom: 500px;
+
   h2 {
     font-size: 2.7em;
     color: $author-title-color;
@@ -34,6 +41,58 @@ $click-me-color: #0d48a2;
       list-style-type: none;
       margin-bottom: 0;
       padding-left: 0;
+
+      .author {
+        &:hover {
+          background-color: $item-bg-color;
+        }
+
+        label {
+          font-size: 1.6em;
+        }
+
+        i {
+          font-size: 1.6em;
+          cursor: pointer;
+        }
+
+        .edit {
+          color: $edit-color;
+        }
+
+        .remove {
+          color: $delete-color;
+        }
+      }
+    }
+  }
+
+  .author-form {
+    h3 {
+      font-size: 1.6em;
+      color: $sub-title-color;
+      border-bottom: 3px solid $sub-title-color;
+      display: inline-block;
+    }
+
+    i {
+      font-size: 1.9em;
+      cursor: pointer;
+    }
+
+    .form-label {
+      font-size: .9em;
+    }
+
+    .form-control {
+      border: 2px solid $form-control-border-color;
+      border-radius: 0;
+    }
+
+    .btn {
+      padding: 5px 30px;
+      background-color: $click-me-color;
+      font-weight: 500;
     }
   }
 }
